# finiteautomata

./: AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE.txt  README.md  coinc.c  coinc_config.h.in
.github/workflows/: cmake.yml
